<resources>
    <string name="app_name">XiangChao</string>
    <string name="action_settings">Settings</string>
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="badminton">Badminton</string>
    <string name="scoring">Begin Scoring</string>
    <string name="rule">Introduction</string>
    <string name="email">Email the result</string>
    <string name="main_manu">Main Manu</string>
    <string name="three_point_shot">Three-Point Shot</string>
    <string name="nomal_shot">Nomal Shot</string>
    <string name="free_throw">Free Throw</string>
    <string name="score">Score</string>
    <string name="reset">Reset</string>
    <string name="section_end">Section End</string>
    <string name="basketball_int">Basketball is a sport played by two teams of five players on a rectangular court. The objective is to shoot a ball through a hoop 18 inches (46 cm) in diameter and 10 feet (3.048 m) high mounted to a backboard at each end. A team can score a field goal by shooting the ball through the basket during regular play. A field goal scores three points for the shooting team if the player shoots from behind the three-point line, and two points if shot from in front of the line. A team can also score via free throws, which are worth one point, after the other team was assessed with certain fouls. The team with the most points at the end of the game wins, but additional time (overtime) is issued when the score is tied at the end of regulation. The ball can be advanced on the court by throwing it to a teammate, or by bouncing it while walking or running (dribbling). It is a violation to lift, or drag, one\'s pivot foot without dribbling the ball, to carry it, or to hold the ball with both hands then resume dribbling. There are many techniques for ball handling—shooting, passing, dribbling, and rebounding. Basketball teams generally have player positions, the tallest and strongest members of a team are called acenter or power forward, while slightly shorter and more agile players are called small forward, and the shortest players or those who possess the best ball handling skills are called a point guard orshooting guard. The point guard directs the on court action of the team, implementing the coach\'s game plan, and managing the execution of offensive and defensive plays (player positioning). Basketball is one of the world\'s most popular and widely viewed sports.[1] The National Basketball Association (NBA) is the most popular and widely considered to be the highest level of professional basketball in the world and NBA players are the world\'s best paid sportsmen, by average annual salary per player.[2][3] Outside North America, the top clubs from national leagues qualify to continental championships such as the Euroleague and FIBA Americas League. The FIBA Basketball World Cup attracts the top national teams from around the world. Each continent hosts regional competitions for national teams, like EuroBasket and FIBA Americas Championship. Women\'s basketball is less popular than men\'s. The FIBA Women\'s Basketball World Cup features the top national teams from continental championships. The main North American league is the WNBA, whereas the EuroLeague Women has been dominated by teams from the Russian Women\'s Basketball Premier League.</string>
    <string name="badminton_int">Badminton is a racquet sport played using racquets to hit a shuttlecock across a net. Although it may be played with larger teams, the most common forms of the game are "singles" (with one player per side) and "doubles" (with two players per side). Badminton is often played as a casual outdoor activity in a yard or on a beach; formal games are played on a rectangular indoor court. Points are scored by striking the shuttlecock with the racquet[1] and landing it within the opposing side\'s half of the court. Each side may only strike the shuttlecock once before it passes over the net. Play ends once the shuttlecock has struck the floor or if a fault has been called by the umpire, service judge, or (in their absence) the opposing side.[2] The shuttlecock is a feathered or (in informal matches) plastic projectile which flies differently from the balls used in many other sports. In particular, the feathers create much higher drag, causing the shuttlecock to decelerate more rapidly. Shuttlecocks also have a high top speed compared to the balls in other racquet sports. The game developed in British India from the earlier game of battledore and shuttlecock. European play came to be dominated by Denmark but the game has become very popular in Asia, with recent competition dominated by China. Since 1992, badminton has been a Summer Olympic sport with five events: men\'s singles, women\'s singles, men\'s doubles, women\'s doubles, and mixed doubles. At high levels of play, the sport demands excellent fitness: players require aerobic stamina, agility, strength, speed, and precision. It is also a technical sport, requiring good motor coordination and the development of sophisticated racquet movements.[3]</string>
    <string name="Soccer_int">Association football, more commonly known as football or soccer,[3] is a sport played between two teams of eleven players with a spherical ball. It is played by 250 million players in over 200 nations, making it the world\'s most popular sport.[4][5][6][7] The game is played on a rectangular field with a goal at each end. The object of the game is to score by getting the ball into the opposing goal. The goalkeepers are the only players allowed to touch the ball with their hands or arms while it is in play and only in their penalty area. Outfield players mostly use their feet to strike or pass the ball, but may also use their head or torso to do so instead. The team that scores the most goals by the end of the match wins. If the score is level at the end of the game, either a draw is declared or the game goes into extra time and/or a penalty shootout depending on the format of the competition. The Laws of the Game were originally codified in England byThe Football Association in 1863. Association football is governed internationally by theInternational Federation of Association Football (FIFA; French: Fédération Internationale de Football Association), which organises World Cups for both men and women every four years.[8]</string>
    <string name="table_int">Table tennis, also known as ping pong, is a sport in which two or four players hit a lightweight ball back and forth across a table using a small paddle. The game takes place on a hard table divided by a net. Except for the initial serve, the rules are generally as follows: Players must allow a ball played toward them to bounce one time on their side of the table, and must return it so that it bounces on the opposite side at least once. Points are scored when a player fails to return the ball within the rules. Play is fast and demands quick reactions. Spinning the ball alters its trajectory and limits an opponent\'s options, giving the hitter a great advantage. When doing so the hitter has a better chance of scoring if the spin is successful. Table tennis is governed by the worldwide organization International Table Tennis Federation, founded in 1926. ITTF currently includes 220 member associations.[1] The table tennis official rules are specified in the ITTF handbook.[2] Table tennis has been an Olympic sport since1988,[3] with several event categories. In particular, from 1988 until 2004, these were: men\'s singles, women\'s singles, men\'s doubles and women\'s doubles. Since 2008, a team event has been played instead of the doubles.</string>
    <string name="draw">Draw</string>
    <string name="competition_results">The Competition Results of A and B</string>
    <string name="big_point">Big Point</string>
    <string name="open_mail">Open Email</string>
    <string name="open_error">Error, mail open failed</string>
    <string name="volleyball">Volleyball</string>
    <string name="volleyball_int">Volleyball is a team sport in which two teams of six players are separated by a net. Each team tries to score points by grounding a ball on the other team\'s court under organized rules.[1] It has been a part of the official program of the Summer Olympic Games since 1964.  The complete rules are extensive. But simply, play proceeds as follows: a player on one of the teams begins a \'rally\' by serving the ball (tossing or releasing it and then hitting it with a hand or arm), from behind the back boundary line of the court, over the net, and into the receiving team\'s court. The receiving team must not let the ball be grounded within their court. The team may touch the ball up to 3 times but individual players may not touch the ball twice consecutively. Typically, the first two touches are used to set up for an attack, an attempt to direct the ball back over the net in such a way that the serving team is unable to prevent it from being grounded in their court.  The rally continues, with each team allowed as many as three consecutive touches, until either (1): a team makes a kill, grounding the ball on the opponent\'s court and winning the rally; or (2): a team commits a fault and loses the rally. The team that wins the rally is awarded a point, and serves the ball to start the next rally. A few of the most common faults include:  causing the ball to touch the ground or floor outside the opponents\' court or without first passing over the net; catching and throwing the ball; double hit: two consecutive contacts with the ball made by the same player; four consecutive contacts with the ball made by the same team; net foul: touching the net during play; foot fault: the foot crosses over the boundary line when serving. The ball is usually played with the hands or arms, but players can legally strike or push (short contact) the ball with any part of the body.  A number of consistent techniques have evolved in volleyball, including spiking and blocking (because these plays are made above the top of the net, the vertical jump is an athletic skill emphasized in the sport) as well as passing, setting, and specialized player positions and offensive and defensive structures.</string>
    <string name="name">Super Sports Counter</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_email">Please input your Email</string>
    <string name="sign_up">Sign up</string>
    <string name="password_forget">Forgot your password?</string>
    <string name="quit">Quit</string>
    <string name="password">Password</string>
    <string name="auth_fail">Incorrect username or password.</string>
    <string name="re_password">Re-enter password</string>
    <string name="net_error">Network error</string>
    <string name="invalid_password">Passwords input are different</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="reguster_success">Regustered successfully</string>
    <string name="signout_success">Signout successfully</string>
    <string name="auth_success">Login success</string>
    <string name="wait_login">Logging in</string>
    <string name="please_wait">Please wait...</string>


</resources>
