<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.studyjams.s1.sj65.xiangchao.MainActivity">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="1"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="2"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="101"
        android:title="@string/quit"
        app:showAsAction="never" />
</menu>
