<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/account_set_email"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="32dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/account_set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:selectAllOnFocus="false" />

        <EditText
            android:id="@+id/account_set2_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="false" />

        <Button
            android:id="@+id/register_info"
            style="@style/Bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accountRegisterInput"
            android:text="@string/sign_up" />

    </LinearLayout>

</RelativeLayout>