<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="16dp"
                        android:text="Team A"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_a_scoreA_bas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:paddingBottom="24dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="add3PointsABas"
                        android:text="@string/three_point_shot"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="add2PointsABas"
                        android:text="@string/nomal_shot"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="freeThrowABas"
                        android:text="@string/free_throw"
                        android:textAllCaps="false" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="#BDBDBD" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="16dp"
                        android:text="Team B"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_a_scoreB_bas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:paddingBottom="24dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="add3PointsBBas"
                        android:text="@string/three_point_shot"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="add2PointsBBas"
                        android:text="@string/nomal_shot"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="freeThrowBBas"
                        android:text="@string/free_throw"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/section_end_bas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/section_end"
                android:textAllCaps="false"
                android:onClick="sectionEndBas"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/big_point_bas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="0:0"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/small_point_bas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0:0" />

            </LinearLayout>

            <Button
                android:id="@+id/email_result_bas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/email"
                android:textAllCaps="false"
                android:onClick="sendMailBas"/>
            <!--android:layout_above="@id/reset"-->
            <Button
                android:id="@+id/reset_bas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:onClick="resetBas"
                android:text="@string/reset"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>